--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -71,7 +71,7 @@
   .hamburger .bar {
     width: 25px;
     height: 3px;
-    background-color: #000000; /* Black */
+    background-color: #fff; /* Black */
     border-radius: 3px;
   }
 
@@ -137,7 +137,7 @@
       position: absolute;
       top: 100%;
       right: 0;
-      background-color: #ffffff; /* White background */
+      background-color: #005F00; /* Darker green */
       width: 100%;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       padding: 1rem 0;
