--- a/frontend/src/components/SoldOutPropertySection.css
+++ b/frontend/src/components/SoldOutPropertySection.css
@@ -14,13 +14,13 @@
   
   .property-grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 columns in gri */
+    grid-template-columns: repeat(4, 1fr); /* 4 columns on large screens */
     gap: 20px;
   }
   
   .property-card {
     width: 100%;
-    height: 420px; /* Adjusted height for better layout balance */
+    height: 350px; /* Reduced height for better layout balance */
     perspective: 1000px;
     text-decoration: none;
   }
@@ -47,11 +47,10 @@
     overflow: hidden;
   }
   
-  /* Ensure images cover the area of the div */
   .property-front img {
     width: 100%;
     height: 100%; /* Ensuring image fills card container */
-    object-fit: cover; /* Cover the area of the div without distorting the image */
+    object-fit: cover;
     border: 1px solid #ddd;
     border-radius: 8px;
     opacity: 1;
@@ -68,8 +67,8 @@
     border-radius: 8px;
     padding: 15px;
     text-align: center;
-    max-height: 100%; /* Ensure the back content doesn't exceed the card height */
-    overflow: hidden; /* Prevent overflow */
+    max-height: 100%;
+    overflow: hidden;
   }
   
   .property-back::before {
@@ -90,11 +89,11 @@
     line-height: 1.5;
     text-align: center;
     color: rgba(255, 255, 255, 0.9);
-    overflow: hidden; /* Prevent overflow */
-    text-overflow: ellipsis; /* Add ellipsis if text overflows */
-    display: -webkit-box; /* Enable multi-line ellipsis */
-    -webkit-line-clamp: 3; /* Limit to 3 lines of text */
-    -webkit-box-orient: vertical; /* Required for line clamping */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
   }
   
   .property-back h3 {
@@ -105,8 +104,8 @@
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
     margin: 15px 0;
     z-index: 1;
-    word-wrap: break-word; /* Ensure the text breaks correctly on smaller screens */
-    white-space: normal; /* Allow the text to wrap within the container */
+    word-wrap: break-word;
+    white-space: normal;
   }
   
   .property-back p {
@@ -128,7 +127,7 @@
     }
   
     .property-card {
-      height: 380px; /* Adjusted height for smaller screens */
+      height: 300px; /* Adjusted height for smaller screens */
     }
   
     .property-description {
