--- a/frontend/src/components/FeaturedPropertySection.css
+++ b/frontend/src/components/FeaturedPropertySection.css
@@ -1,7 +1,7 @@
 /* Section Container */
 .featured-properties {
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: #06dacfd5;
   text-align: center;
 }
 
@@ -20,14 +20,15 @@
   list-style: none;
 }
 
-.property-card {
+.property-card{
   display: block;
   position: relative;
-  background-color: white;
+  background-color: rgb(29, 126, 61);
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
+
 }
 
 .property-card:hover {
